--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   google_fonts: ^1.1.0
   intl: ^0.16.1
   bottom_navy_bar: ^5.4.0
+  image_picker: ^0.6.7+4
+  image_cropper: ^1.2.3
+  firebase_storage: ^3.1.6
 
 dev_dependencies:
   flutter_test:
