--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   bottom_navy_bar: ^5.4.0
   image_picker: ^0.6.7+4
   image_cropper: ^1.2.3
+  badges: ^1.1.1
   firebase_storage: ^3.1.6
 
 dev_dependencies:
